# AnkiDeckConstructor

./: .gitignore  .pre-commit-config.yaml  README.md  ankicard.py  card.py  collection.py  exceptions.py  gaggle.py  pyproject.toml
.github/: pull_request_template.md
cases/test_gaggle/: __init__.py  case_ankicard.py  cases_ankicard.py
dev/: SetupDevDependencies.ps1
src/gaggle/: ankicard.py  exceptions.py  gaggle.py  main.py
tests/test_exceptions/: test_exceptions.py
tests/test_gaggle/: conftest.py  test_ankicard.py
typings/gaggle/: __init__.pyi  exceptions.pyi  gaggle.pyi  main.pyi
